Fixes to page layout: prevent horizontal scroll from too wide div

--- a/src/PublicSite/web/css/main.css
+++ b/src/PublicSite/web/css/main.css
@@ -7,7 +7,6 @@ html,body
     padding-top:50px;
     padding-bottom:50px;
     min-height: 100%;
-    /*height: auto !important;*/
     height: 100%;
     margin: 0 auto -50px;
     overflow:auto;
@@ -31,9 +30,9 @@ html,body
 #counter
 {
     height:10%;
-    width:100%;
+    width:15%;
     position:absolute;
-    bottom:0px;
+    bottom:50px;
     border:1px solid black;
 }
 #hello
